--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ button { padding:6px 10px; }
 </table>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbxbuCeMG9yKM4UTEmC_OtCF4aKOJejFaaiZMkd1uwRAUw7Hn8n4SL8IJqyxlfF5LZ3U/exec";
+const API_URL = https://script.google.com/macros/s/AKfycbxbuCeMG9yKM4UTEmC_OtCF4aKOJejFaaiZMkd1uwRAUw7Hn8n4SL8IJqyxlfF5LZ3U/exec";
 
 function saveToSheet(data){
   fetch(API_URL,{
