--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ table {
   width: 100%;
   border-collapse: collapse;
   background: #fff;
+  margin-bottom: 20px;
 }
 th, td {
   border: 1px solid #ccc;
@@ -51,7 +52,9 @@ button {
   <td>B001</td>
   <td>16944495</td>
   <td>5000</td>
-  <td><button onclick="moveStage(this,'TEMP_OK')">Production OK</button></td>
+  <td>
+    <button onclick="moveStage(this,'TEMP_OK')">Production OK</button>
+  </td>
 </tr>
 </table>
 
@@ -89,11 +92,11 @@ button {
 </table>
 
 <script>
-// 🔴 NEW GOOGLE APPS SCRIPT URL (CONFIRMED WORKING)
+/* ✅ NEW WORKING GOOGLE APPS SCRIPT URL */
 const API_URL =
 "https://script.google.com/macros/s/AKfycbxbuCeMG9yKM4UTEmC_OtCF4aKOJejFaaiZMkd1uwRAUw7Hn8n4SL8IJqyxlfF5LZ3U/exec";
 
-// SAVE TO GOOGLE SHEET (CORS SAFE)
+/* SAVE DATA TO GOOGLE SHEET (CORS SAFE) */
 function saveToSheet(data) {
   fetch(API_URL, {
     method: "POST",
@@ -103,7 +106,7 @@ function saveToSheet(data) {
   });
 }
 
-// MOVE MATERIAL TO NEXT STAGE
+/* MOVE MATERIAL STAGE */
 function moveStage(btn, status) {
   const row = btn.parentElement.parentElement;
   const cells = row.children;
@@ -112,7 +115,7 @@ function moveStage(btn, status) {
   const part  = cells[1].innerText;
   const qty   = cells[2].innerText;
 
-  // SAVE DATA
+  // Save entry
   saveToSheet({
     batch_no: batch,
     part_no: part,
@@ -123,7 +126,6 @@ function moveStage(btn, status) {
     remarks: ""
   });
 
-  // CREATE NEW ROW
   const newRow = document.createElement("tr");
   newRow.innerHTML = `
     <td>${batch}</td>
@@ -132,27 +134,4 @@ function moveStage(btn, status) {
   `;
 
   if (status === "TEMP_OK") {
-    newRow.innerHTML += `<td>
-      <button onclick="moveStage(this,'QA_OK')">Tempering OK</button>
-    </td>`;
-    document.getElementById("tempering").appendChild(newRow);
-  }
-
-  if (status === "QA_OK") {
-    newRow.innerHTML += `<td>
-      <button onclick="moveStage(this,'PACKED')">QA OK</button>
-    </td>`;
-    document.getElementById("qa").appendChild(newRow);
-  }
-
-  if (status === "PACKED") {
-    newRow.innerHTML += `<td>PACKED</td>`;
-    document.getElementById("packing").appendChild(newRow);
-  }
-
-  row.remove();
-}
-</script>
-
-</body>
-</html>
+    n
