--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ button { background:#2c3e50; color:#fff; border:none; }
 <button onclick="submitProduction()">Release to Next Process</button>
 
 <script>
-const API_URL = "PASTE_YOUR_NEW_DEPLOYMENT_URL_HERE";
+const API_URL = "https://script.google.com/macros/s/AKfycbyZMTBXTw9dYP73mjHlGbLofpx_EkOuBy3CbfQyWkxvsUC3fTlGb_p82VK2xSrDkOsS/exec";
 
 function submitProduction() {
 
