--- a/index.html
+++ b/index.html
@@ -6,42 +6,15 @@
 <title>Process Tracking System</title>
 
 <style>
-body {
-  font-family: Arial;
-  background: #f4f6f8;
-  padding: 10px;
-}
+body { font-family: Arial; background:#f4f6f8; padding:10px; }
 .tabs button {
-  padding: 8px 12px;
-  margin: 2px;
-  border: none;
-  background: #ccc;
+  padding:8px 12px; margin:2px; border:none; cursor:pointer;
 }
-.tabs button.active {
-  background: #2c3e50;
-  color: #fff;
-}
-.tab {
-  display: none;
-  background: #fff;
-  padding: 10px;
-  margin-top: 10px;
-}
-input, select, button {
-  width: 100%;
-  padding: 6px;
-  margin: 4px 0;
-}
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
-th, td {
-  border: 1px solid #ccc;
-  padding: 6px;
-  text-align: center;
-}
+.tabs button.active { background:#2c3e50; color:#fff; }
+.tab { display:none; background:#fff; padding:10px; margin-top:10px; }
+input, select, button { width:100%; padding:6px; margin:4px 0; }
+table { width:100%; border-collapse:collapse; margin-top:10px; }
+th, td { border:1px solid #ccc; padding:6px; text-align:center; }
 </style>
 </head>
 
@@ -65,13 +38,7 @@ th, td {
 
   <input id="part" placeholder="Part No">
   <input id="batch" placeholder="Batch No">
-  <input id="wo" placeholder="Work Order No">
-  <input id="machine" placeholder="Machine No">
   <input id="qty" type="number" placeholder="Quantity">
-  <input id="plant" placeholder="Plant">
-  <input id="shift" placeholder="Shift">
-  <input id="grn" placeholder="GRN No">
-  <input id="coil" placeholder="Coil No">
 
   <label>Next Process</label>
   <select id="nextProcess">
@@ -95,62 +62,57 @@ th, td {
   <button onclick="releaseProduction()">Release Material</button>
 </div>
 
-<!-- ================= PROCESS TABS ================= -->
+<!-- ================= PROCESS TABLES ================= -->
 <div id="tempering" class="tab">
   <h3>Tempering</h3>
-  <table id="temperingTable">
-    <tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>
-  </table>
+  <table id="temperingTable"></table>
 </div>
 
 <div id="cleaning" class="tab">
   <h3>Cleaning</h3>
-  <table id="cleaningTable">
-    <tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>
-  </table>
+  <table id="cleaningTable"></table>
 </div>
 
 <div id="vibro" class="tab">
   <h3>Vibro</h3>
-  <table id="vibroTable">
-    <tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>
-  </table>
+  <table id="vibroTable"></table>
 </div>
 
 <div id="plating" class="tab">
   <h3>Plating</h3>
-  <table id="platingTable">
-    <tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>
-  </table>
+  <table id="platingTable"></table>
 </div>
 
 <div id="sorting" class="tab">
   <h3>Sorting</h3>
-  <table id="sortingTable">
-    <tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>
-  </table>
+  <table id="sortingTable"></table>
 </div>
 
 <div id="qa" class="tab">
   <h3>QA</h3>
-  <table id="qaTable">
-    <tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>
-  </table>
+  <table id="qaTable"></table>
 </div>
 
 <script>
+/* 🔴 YOUR NEW APPS SCRIPT URL */
 const API_URL =
-"https://script.google.com/macros/s/AKfycbwTWp8gsfzPW3pWUk_zY0ctvfHSmJuaFQ9jdwDCBZ0AoiBYi3GyQT4upHVop4FL4c6H/exec";
+"https://script.google.com/macros/s/AKfycbyWqUFahw4Rq6gBgxsUg0rTd2-pY2Ttab-9uWqb21Z4VdXD47LCmv8zxbfwnkRklP47/exec";
 
-function openTab(id) {
-  document.querySelectorAll('.tab').forEach(t => t.style.display="none");
+/* TAB SWITCH */
+function openTab(id){
+  document.querySelectorAll('.tab').forEach(t=>t.style.display="none");
   document.getElementById(id).style.display="block";
-  document.querySelectorAll('.tabs button').forEach(b => b.classList.remove("active"));
+
+  if(id!=="production"){
+    loadProcess(capitalize(id), id+"Table");
+  }
+
+  document.querySelectorAll('.tabs button').forEach(b=>b.classList.remove("active"));
   event.target.classList.add("active");
 }
 
-function releaseProduction() {
-  const next = nextProcess.value;
+/* PRODUCTION RELEASE */
+function releaseProduction(){
 
   fetch(API_URL,{
     method:"POST",
@@ -158,16 +120,10 @@ function releaseProduction() {
     headers:{ "Content-Type":"application/json" },
     body:JSON.stringify({
       current_process:"Production",
-      next_process: next,
+      next_process: nextProcess.value,
       part_no: part.value,
       batch_no: batch.value,
-      work_order_no: wo.value,
-      machine_no: machine.value,
       quantity: qty.value,
-      plant: plant.value,
-      shift: shift.value,
-      grn_no: grn.value,
-      coil_no: coil.value,
       handling_type: handlingType.value,
       handling_qty: handlingQty.value,
       handling_count: handlingCount.value,
@@ -176,24 +132,71 @@ function releaseProduction() {
     })
   });
 
-  addRow(next.toLowerCase()+"Table", batch.value, part.value, qty.value, next);
-  alert("Released to " + next);
+  alert("Released to " + nextProcess.value);
 }
 
-function addRow(tableId,batch,part,qty,next){
-  const tr=document.createElement("tr");
-  tr.innerHTML=
-    `<td>${batch}</td>
-     <td>${part}</td>
-     <td>${qty}</td>
-     <td><button onclick="processOK(this,'${next}')">OK</button></td>`;
-  document.getElementById(tableId).appendChild(tr);
+/* LOAD DATA FROM EXCEL */
+function loadProcess(process, tableId){
+
+  fetch(API_URL + "?process=" + process)
+    .then(r=>r.json())
+    .then(rows=>{
+      const table=document.getElementById(tableId);
+      table.innerHTML=
+        "<tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>";
+
+      rows.forEach(r=>{
+        const tr=document.createElement("tr");
+        tr.innerHTML=`
+          <td>${r.Batch_No}</td>
+          <td>${r.Part_No}</td>
+          <td>${r.Quantity}</td>
+          <td>
+            <button onclick="processOK('${process}','${r.Batch_No}','${r.Part_No}','${r.Quantity}')">
+              OK
+            </button>
+          </td>`;
+        table.appendChild(tr);
+      });
+    });
 }
 
-function processOK(btn,current){
-  const row=btn.parentElement.parentElement;
-  row.remove();
+/* PROCESS OK */
+function processOK(current,batch,part,qty){
+
+  fetch(API_URL,{
+    method:"POST",
+    mode:"no-cors",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({
+      current_process: current,
+      next_process: getNextProcess(current),
+      batch_no: batch,
+      part_no: part,
+      quantity: qty,
+      status:"OK",
+      operator: current
+    })
+  });
+
+  alert(current + " OK → sent to next process");
+  loadProcess(current, current.toLowerCase()+"Table");
 }
+
+/* NEXT PROCESS MAP */
+function getNextProcess(p){
+  const map={
+    "Tempering":"Cleaning",
+    "Cleaning":"Vibro",
+    "Vibro":"Plating",
+    "Plating":"Sorting",
+    "Sorting":"QA",
+    "QA":"Packing"
+  };
+  return map[p];
+}
+
+function capitalize(s){ return s.charAt(0).toUpperCase()+s.slice(1); }
 </script>
 
 </body>
